--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,15 @@
     <title>风继续吹</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+            ruby {
+                font-size: 1rem;
+            }
+            
+            rt {
+                font-size: 0.3rem;
+            }
+        </style>
 </head>
 <script>
     (function () {
@@ -22,7 +31,7 @@
 <body class="fluid-container py-5">
     <!-- <ruby>TODO: https://www.feitsui.com/zh-hans/lyrics/69 <rt> han1 </rt></ruby> -->
     <div class="d-flex justify-content-center">
-        <div id="chord" class="mx-auto" style="white-space: pre-wrap; font-family: monospace">
+        <div id="chord" class="mx-auto" style="white-space: pre-wrap; overflow: hidden; font-family: monospace">
 [INTRO]
 | Cmaj7|Fmaj7|C D |Cmaj7|Dm7|C | G | Cmaj7 |
 [VERSE]
