--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>风继续吹</title>
+    <title>chord.cheer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <style>
-            ruby {
-                font-size: 1rem;
-            }
-            
-            rt {
-                font-size: 0.3rem;
-            }
-        </style>
 </head>
 <script>
     (function () {
@@ -28,111 +19,14 @@
     })();
 </script>
 
-<body class="fluid-container py-5">
-    <!-- <ruby>TODO: https://www.feitsui.com/zh-hans/lyrics/69 <rt> han1 </rt></ruby> -->
-    <div class="d-flex justify-content-center">
-        <div id="chord" class="mx-auto" style="white-space: pre-wrap; overflow: hidden; font-family: monospace">
-[INTRO]
-| Cmaj7|Fmaj7|C D |Cmaj7|Dm7|C | G | Cmaj7 |
-[VERSE]
-| Cmaj7        | C        C7   | Fmaj7
-（）<ruby>我<rt>ngo5</rt></ruby><ruby>勸<rt>hyun3</rt></ruby><ruby>你<rt>nei5</rt></ruby><ruby>早<rt>zou2</rt></ruby><ruby>點<rt>dim2</rt></ruby><ruby>歸<rt>gwai1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（）<ruby>你<rt>nei5</rt></ruby><ruby>說<rt>syut3</rt></ruby><ruby>你<rt>nei5</rt></ruby>（<ruby>不<rt>bat1</rt></ruby>）<ruby>想<rt>soeng2</rt></ruby><ruby>歸<rt>gwai1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>只<rt>zi2</rt></ruby>）<ruby>叫<rt>giu3</rt></ruby><ruby>我<rt>ngo5</rt></ruby><ruby>抱<rt>pou5</rt></ruby><ruby>著<rt>zyu3</rt></ruby><ruby>你<rt>nei5</rt></ruby>
-   |Dm         G7        | Cmaj7
-<ruby>悠<rt>jau4</rt></ruby><ruby>悠<rt>jau4</rt></ruby>（<ruby>海<rt>hoi2</rt></ruby>）<ruby>風<rt>fung1</rt></ruby><ruby>輕<rt>hing1</rt></ruby><ruby>輕<rt>hing1</rt></ruby><ruby>吹<rt>ceoi1</rt></ruby>（<ruby>冷<rt>laang5</rt></ruby>）<ruby>卻<rt>koek3</rt></ruby><ruby>了<rt>liu5</rt></ruby><ruby>野<rt>je5</rt></ruby><ruby>火<rt>fo2</rt></ruby> <ruby>堆<rt>deoi1</rt></ruby>（）<ruby>我<rt>ngo5</rt></ruby><ruby>看<rt>hon3</rt></ruby><ruby>見<rt>gin3</rt></ruby><ruby>傷<rt>soeng1</rt></ruby><ruby>心<rt>sam1</rt></ruby><ruby>的<rt>dik1</rt></ruby><ruby>你<rt>nei5</rt></ruby>
-| C        C7     | Fmaj7       | Dm7         G       |
-（）<ruby>你<rt>nei5</rt></ruby><ruby>叫<rt>giu3</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>怎<rt>zam2</rt></ruby>）<ruby>舍<rt>se3</rt></ruby><ruby>得<rt>dak1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>哭<rt>huk1</rt></ruby>）<ruby>態<rt>taai3</rt></ruby><ruby>也<rt>jaa5</rt></ruby><ruby>絕<rt>zyut6</rt></ruby><ruby>美<rt>mei5</rt></ruby><ruby>如<rt>jyu4</rt></ruby><ruby>何<rt>ho4</rt></ruby>（<ruby>止<rt>zi2</rt></ruby>）<ruby>哭<rt>huk1</rt></ruby> <ruby>祇<rt>kei4</rt></ruby><ruby>得<rt>dak1</rt></ruby><ruby>輕<rt>hing1</rt></ruby>（<ruby>吻<rt>man5</rt></ruby>）<ruby>你<rt>nei5</rt></ruby><ruby>發<rt>faat3</rt></ruby><ruby>邊<rt>bin1</rt></ruby>
-[CHORUS]
-  | C      Am | Dm7     G7 | C       Am     | Dm7      G7 |
-<ruby>讓<rt>joeng6</rt></ruby>（<ruby>風<rt>fung1</rt></ruby>）<ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby>（<ruby>吹<rt>ceoi1</rt></ruby>）（<ruby>不<rt>bat1</rt></ruby>）<ruby>忍<rt>jan2</rt></ruby><ruby>遠<rt>jyun5</rt></ruby>（<ruby>離<rt>lei4</rt></ruby>）（）<ruby>心<rt>sam1</rt></ruby><ruby>裏<rt>lei5</rt></ruby><ruby>極<rt>gik6</rt></ruby><ruby>渴<rt>hot3</rt></ruby>（<ruby>望<rt>mong6</rt></ruby>）<ruby>希<rt>hei1</rt></ruby><ruby>望<rt>mong6</rt></ruby>（<ruby>留<rt>lau4</rt></ruby>）<ruby>下<rt>haa6</rt></ruby><ruby>伴<rt>bun6</rt></ruby><ruby>著<rt>zyu3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby>）
-| C   Am | Dm7    G7 | C         Am    | Dm7       G7 |
-<ruby>風<rt>fung1</rt></ruby><ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby>（<ruby>吹<rt>ceoi1</rt></ruby>）（<ruby>不<rt>bat1</rt></ruby>）<ruby>忍<rt>jan2</rt></ruby><ruby>遠<rt>jyun5</rt></ruby>（<ruby>離<rt>lei4</rt></ruby>）（）<ruby>心<rt>sam1</rt></ruby><ruby>裏<rt>lei5</rt></ruby><ruby>亦<rt>jik6</rt></ruby><ruby>有<rt>jau5</rt></ruby>（<ruby>淚<rt>leoi6</rt></ruby>）<ruby>不<rt>bat1</rt></ruby><ruby>願<rt>jyun6</rt></ruby>（<ruby>流<rt>lau4</rt></ruby>）<ruby>淚<rt>leoi6</rt></ruby><ruby>望<rt>mong6</rt></ruby><ruby>著<rt>zyu3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby>）
-  | Fmaj7      | E7    | Am         | Dm  G |
-<ruby>過<rt>gwo3</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>多<rt>do1</rt></ruby>）<ruby>少<rt>siu2</rt></ruby><ruby>快<rt>faai3</rt></ruby><ruby>樂<rt>lok6</rt></ruby><ruby>記<rt>gei3</rt></ruby>（<ruby>憶<rt>jik1</rt></ruby>）<ruby>何<rt>ho4</rt></ruby><ruby>妨<rt>fong4</rt></ruby>（<ruby>與<rt>jyu5</rt></ruby>）<ruby>你<rt>nei5</rt></ruby>，<ruby>一<rt>jat1</rt></ruby><ruby>起<rt>hei2</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>追<rt>zeoi1</rt></ruby>）
-   | C          Em    | F           G |
-<ruby>要<rt>jiu1</rt></ruby><ruby>將<rt>zoeng3</rt></ruby>（<ruby>憂<rt>jau1</rt></ruby>）<ruby>鬱<rt>wat1</rt></ruby><ruby>苦<rt>fu2</rt></ruby><ruby>痛<rt>tung3</rt></ruby><ruby>洗<rt>sai2</rt></ruby>（<ruby>去<rt>heoi3</rt></ruby>）<ruby>柔<rt>jau4</rt></ruby><ruby>情<rt>cing4</rt></ruby>（<ruby>蜜<rt>mat6</rt></ruby>）<ruby>意<rt>ji3</rt></ruby><ruby>我<rt>ngo5</rt></ruby><ruby>願<rt>jyun6</rt></ruby><ruby>記<rt>gei3</rt></ruby>（<ruby>取<rt>ceoi2</rt></ruby>）
-   | C       Am7 | Dm7        G     | C      Am7 |
-<ruby>要<rt>jiu1</rt></ruby><ruby>強<rt>koeng4</rt></ruby>（<ruby>忍<rt>jan2</rt></ruby>）<ruby>離<rt>lei4</rt></ruby><ruby>情<rt>cing4</rt></ruby>（<ruby>淚<rt>leoi6</rt></ruby>）<ruby>未<rt>mei6</rt></ruby>（<ruby>許<rt>heoi2</rt></ruby>）<ruby>它<rt>taa1</rt></ruby><ruby>向<rt>hoeng3</rt></ruby><ruby>下<rt>haa6</rt></ruby>（<ruby>垂<rt>seoi4</rt></ruby>）<ruby>愁<rt>sau4</rt></ruby><ruby>如<rt>jyu4</rt></ruby>（<ruby>鎖<rt>so2</rt></ruby>）<ruby>眉<rt>mei4</rt></ruby><ruby>頭<rt>tau4</rt></ruby>（<ruby>聚<rt>zeoi6</rt></ruby>）
-    | Dm7        G | G | Dm Em F G | G / / 2/4
-<ruby>別<rt>bit6</rt></ruby><ruby>離<rt>lei4</rt></ruby><ruby>淚<rt>leoi6</rt></ruby>（<ruby>始<rt>ci2</rt></ruby>）<ruby>終<rt>zung1</rt></ruby><ruby>要<rt>jiu1</rt></ruby><ruby>下<rt>haa6</rt></ruby>（<ruby>垂<rt>seoi4</rt></ruby>）
-[BRIDGE]
-| C        Em  | Am         C7     | F        E7 |
-（）<ruby>我<rt>ngo5</rt></ruby><ruby>已<rt>ji5</rt></ruby><ruby>令<rt>ling6</rt></ruby><ruby>你<rt>nei5</rt></ruby>（<ruby>快<rt>faai3</rt></ruby>）<ruby>樂<rt>lok6</rt></ruby>（）<ruby>你<rt>nei5</rt></ruby><ruby>也<rt>jaa5</rt></ruby><ruby>讓<rt>joeng6</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>癡<rt>ci1</rt></ruby>）<ruby>癡<rt>ci1</rt></ruby><ruby>醉<rt>zeoi3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby><ruby>已<rt>ji5</rt></ruby>）<ruby>在<rt>zoi6</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>心<rt>sam1</rt></ruby>）
-      | Am    Am7        | F      G           | C    Fm |
-<ruby>不<rt>bat1</rt></ruby><ruby>必<rt>bit1</rt></ruby><ruby>再<rt>zoi3</rt></ruby><ruby>問<rt>man6</rt></ruby>（<ruby>記<rt>gei3</rt></ruby>）<ruby>著<rt>zyu3</rt></ruby><ruby>誰<rt>seoi4</rt></ruby>（）<ruby>留<rt>lau4</rt></ruby><ruby>住<rt>zyu6</rt></ruby><ruby>眼<rt>ngaan5</rt></ruby><ruby>內<rt>noi6</rt></ruby>（<ruby>每<rt>mui5</rt></ruby>）<ruby>滴<rt>dik6</rt></ruby><ruby>淚<rt>leoi6</rt></ruby>（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>
-[ENDING]
-G            | C       G           | C       | G# Bb C
-（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>斷<rt>dyun6</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>，（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>斷<rt>dyun6</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>...
-</pre>
+<body class="container py-5">
+    <div class="text-left">
+        <h3 class="mb-4">Index for chord.cheer</h3>
+        <div class="list-group">
+            <a href="风继续吹.html" class="list-group-item list-group-item-action">风继续吹</a>
+            <a href="source/我怀念的.html" class="list-group-item list-group-item-action">我怀念的</a>
         </div>
-
-        <script>
-            // Function to check if a string contains only ASCII characters
-            function isAsciiOnly(str) {
-                return /^[\x00-\x7F]*$/.test(str);
-            }
-
-            // Function to check if a string is surrounded by [ and ]
-            function isSurroundedByBrackets(str) {
-                return /^\[.*\]$/.test(str);
-            }
-
-            // Function to highlight ASCII-only lines and bracketed lines in a <pre> element
-            function highlightAsciiLines(preElement, asciiClass = "highlight-ascii", bracketClass = "highlight-bracket") {
-                if (!preElement || preElement.tagName !== "DIV") {
-                    console.error("The provided element is not a <pre> element.");
-                    return;
-                }
-
-                // Split content into lines
-                const lines = preElement.innerHTML.split("\n");
-
-                // Clear the current content
-                preElement.innerHTML = "";
-
-                // Process each line
-                lines.forEach(line => {
-                    const lineElement = document.createElement("div");
-                    lineElement.innerHTML = line;
-
-                    // Check if the line contains only ASCII characters
-                    if (isAsciiOnly(line)) {
-                        lineElement.classList.add(asciiClass);
-                    }
-
-                    // Check if the line is surrounded by [ and ]
-                    if (isSurroundedByBrackets(line)) {
-                        lineElement.classList.add(bracketClass);
-                    }
-
-                    preElement.appendChild(lineElement);
-                });
-            }
-
-            // Usage example
-            const preElement = document.querySelector("#chord");
-            highlightAsciiLines(preElement);
-
-            // Add styles for the highlight classes
-            document.head.insertAdjacentHTML("beforeend", `
-<style>
-  [data-bs-theme="dark"] .highlight-ascii {
-      color: #ffffa8;
-  }
-  [data-bs-theme="dark"] .highlight-bracket {
-      color: #00afff;
-  }
-
-[data-bs-theme="light"] .highlight-ascii {
-    color: #004080; /* Dark blue for visibility on light backgrounds */
-}
-
-[data-bs-theme="light"] .highlight-bracket {
-    color: #800000; /* Deep red to stand out on light themes */
-}
-
-</style>
-`);
-        </script>
+    </div>
 </body>
 
 </html>
