--- a/source/风继续吹.html
+++ b/source/风继续吹.html
@@ -40,7 +40,7 @@
    |Dm         G7        | Cmaj7
 悠悠（海）風輕輕吹（冷）卻了野火 堆（）我看見傷心的你
 | C        C7     | Fmaj7       | Dm7         G       |
-（）你叫我（怎）舍得去（哭）態也絕美如何（止）哭 祇得輕（吻）你發邊
+（）你叫我（怎）舍得去（哭）態也絕美如何（止）哭 只得輕（吻）你發邊
 [CHORUS]
   | C      Am | Dm7     G7 | C       Am     | Dm7      G7 |
 讓（風）繼續（吹）（不）忍遠（離）（）心裏極渴（望）希望（留）下伴著（你）
