--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="text-left">
         <h3 class="mb-4">Index for chord.cheer</h3>
         <div class="list-group">
-            <a href="风继续吹.html" class="list-group-item list-group-item-action">风继续吹</a>
+            <a href="source/风继续吹.html" class="list-group-item list-group-item-action">风继续吹</a>
             <a href="source/我怀念的.html" class="list-group-item list-group-item-action">我怀念的</a>
         </div>
     </div>
