--- a/source/风继续吹.html
+++ b/source/风继续吹.html
@@ -36,32 +36,32 @@
 | Cmaj7|Fmaj7|C D |Cmaj7|Dm7|C | G | Cmaj7 |
 [VERSE]
 | Cmaj7        | C        C7   | Fmaj7
-（）我勸你早點歸去（）你說你（不）想歸去（只）叫我抱著你
+（）<ruby>我<rt>ngo5</rt></ruby><ruby>勸<rt>hyun3</rt></ruby><ruby>你<rt>nei5</rt></ruby><ruby>早<rt>zou2</rt></ruby><ruby>點<rt>dim2</rt></ruby><ruby>歸<rt>gwai1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（）<ruby>你<rt>nei5</rt></ruby><ruby>說<rt>syut3</rt></ruby><ruby>你<rt>nei5</rt></ruby>（<ruby>不<rt>bat1</rt></ruby>）<ruby>想<rt>soeng2</rt></ruby><ruby>歸<rt>gwai1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>只<rt>zi2</rt></ruby>）<ruby>叫<rt>giu3</rt></ruby><ruby>我<rt>ngo5</rt></ruby><ruby>抱<rt>pou5</rt></ruby><ruby>著<rt>zyu3</rt></ruby><ruby>你<rt>nei5</rt></ruby>
    |Dm         G7        | Cmaj7
-悠悠（海）風輕輕吹（冷）卻了野火 堆（）我看見傷心的你
+<ruby>悠<rt>jau4</rt></ruby><ruby>悠<rt>jau4</rt></ruby>（<ruby>海<rt>hoi2</rt></ruby>）<ruby>風<rt>fung1</rt></ruby><ruby>輕<rt>hing1</rt></ruby><ruby>輕<rt>hing1</rt></ruby><ruby>吹<rt>ceoi1</rt></ruby>（<ruby>冷<rt>laang5</rt></ruby>）<ruby>卻<rt>koek3</rt></ruby><ruby>了<rt>liu5</rt></ruby><ruby>野<rt>je5</rt></ruby><ruby>火<rt>fo2</rt></ruby> <ruby>堆<rt>deoi1</rt></ruby>（）<ruby>我<rt>ngo5</rt></ruby><ruby>看<rt>hon3</rt></ruby><ruby>見<rt>gin3</rt></ruby><ruby>傷<rt>soeng1</rt></ruby><ruby>心<rt>sam1</rt></ruby><ruby>的<rt>dik1</rt></ruby><ruby>你<rt>nei5</rt></ruby>
 | C        C7     | Fmaj7       | Dm7         G       |
-（）你叫我（怎）舍得去（哭）態也絕美如何（止）哭 只得輕（吻）你發邊
+（）<ruby>你<rt>nei5</rt></ruby><ruby>叫<rt>giu3</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>怎<rt>zam2</rt></ruby>）<ruby>舍<rt>se3</rt></ruby><ruby>得<rt>dak1</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>哭<rt>huk1</rt></ruby>）<ruby>態<rt>taai3</rt></ruby><ruby>也<rt>jaa5</rt></ruby><ruby>絕<rt>zyut6</rt></ruby><ruby>美<rt>mei5</rt></ruby><ruby>如<rt>jyu4</rt></ruby><ruby>何<rt>ho4</rt></ruby>（<ruby>止<rt>zi2</rt></ruby>）<ruby>哭<rt>huk1</rt></ruby> <ruby>只<rt>zi2</rt></ruby><ruby>得<rt>dak1</rt></ruby><ruby>輕<rt>hing1</rt></ruby>（<ruby>吻<rt>man5</rt></ruby>）<ruby>你<rt>nei5</rt></ruby><ruby>發<rt>faat3</rt></ruby><ruby>邊<rt>bin1</rt></ruby>
 [CHORUS]
   | C      Am | Dm7     G7 | C       Am     | Dm7      G7 |
-讓（風）繼續（吹）（不）忍遠（離）（）心裏極渴（望）希望（留）下伴著（你）
+<ruby>讓<rt>joeng6</rt></ruby>（<ruby>風<rt>fung1</rt></ruby>）<ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby>（<ruby>吹<rt>ceoi1</rt></ruby>）（<ruby>不<rt>bat1</rt></ruby>）<ruby>忍<rt>jan2</rt></ruby><ruby>遠<rt>jyun5</rt></ruby>（<ruby>離<rt>lei4</rt></ruby>）（）<ruby>心<rt>sam1</rt></ruby><ruby>裏<rt>lei5</rt></ruby><ruby>極<rt>gik6</rt></ruby><ruby>渴<rt>hot3</rt></ruby>（<ruby>望<rt>mong6</rt></ruby>）<ruby>希<rt>hei1</rt></ruby><ruby>望<rt>mong6</rt></ruby>（<ruby>留<rt>lau4</rt></ruby>）<ruby>下<rt>haa6</rt></ruby><ruby>伴<rt>bun6</rt></ruby><ruby>著<rt>zyu3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby>）
 | C   Am | Dm7    G7 | C         Am    | Dm7       G7 |
-風繼續（吹）（不）忍遠（離）（）心裏亦有（淚）不願（流）淚望著（你）
+<ruby>風<rt>fung1</rt></ruby><ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby>（<ruby>吹<rt>ceoi1</rt></ruby>）（<ruby>不<rt>bat1</rt></ruby>）<ruby>忍<rt>jan2</rt></ruby><ruby>遠<rt>jyun5</rt></ruby>（<ruby>離<rt>lei4</rt></ruby>）（）<ruby>心<rt>sam1</rt></ruby><ruby>裏<rt>lei5</rt></ruby><ruby>亦<rt>jik6</rt></ruby><ruby>有<rt>jau5</rt></ruby>（<ruby>淚<rt>leoi6</rt></ruby>）<ruby>不<rt>bat1</rt></ruby><ruby>願<rt>jyun6</rt></ruby>（<ruby>流<rt>lau4</rt></ruby>）<ruby>淚<rt>leoi6</rt></ruby><ruby>望<rt>mong6</rt></ruby><ruby>著<rt>zyu3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby>）
   | Fmaj7      | E7    | Am         | Dm  G |
-過去（多）少快樂記（憶）何妨（與）你，一起去（追）
+<ruby>過<rt>gwo3</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>多<rt>do1</rt></ruby>）<ruby>少<rt>siu2</rt></ruby><ruby>快<rt>faai3</rt></ruby><ruby>樂<rt>lok6</rt></ruby><ruby>記<rt>gei3</rt></ruby>（<ruby>憶<rt>jik1</rt></ruby>）<ruby>何<rt>ho4</rt></ruby><ruby>妨<rt>fong4</rt></ruby>（<ruby>與<rt>jyu5</rt></ruby>）<ruby>你<rt>nei5</rt></ruby>，<ruby>一<rt>jat1</rt></ruby><ruby>起<rt>hei2</rt></ruby><ruby>去<rt>heoi3</rt></ruby>（<ruby>追<rt>zeoi1</rt></ruby>）
    | C          Em    | F           G |
-要將（憂）鬱苦痛洗（去）柔情（蜜）意我願記（取）
+<ruby>要<rt>jiu1</rt></ruby><ruby>將<rt>zoeng3</rt></ruby>（<ruby>憂<rt>jau1</rt></ruby>）<ruby>鬱<rt>wat1</rt></ruby><ruby>苦<rt>fu2</rt></ruby><ruby>痛<rt>tung3</rt></ruby><ruby>洗<rt>sai2</rt></ruby>（<ruby>去<rt>heoi3</rt></ruby>）<ruby>柔<rt>jau4</rt></ruby><ruby>情<rt>cing4</rt></ruby>（<ruby>蜜<rt>mat6</rt></ruby>）<ruby>意<rt>ji3</rt></ruby><ruby>我<rt>ngo5</rt></ruby><ruby>願<rt>jyun6</rt></ruby><ruby>記<rt>gei3</rt></ruby>（<ruby>取<rt>ceoi2</rt></ruby>）
    | C       Am7 | Dm7        G     | C      Am7 |
-要強（忍）離情（淚）未（許）它向下（垂）愁如（鎖）眉頭（聚）
+<ruby>要<rt>jiu1</rt></ruby><ruby>強<rt>koeng4</rt></ruby>（<ruby>忍<rt>jan2</rt></ruby>）<ruby>離<rt>lei4</rt></ruby><ruby>情<rt>cing4</rt></ruby>（<ruby>淚<rt>leoi6</rt></ruby>）<ruby>未<rt>mei6</rt></ruby>（<ruby>許<rt>heoi2</rt></ruby>）<ruby>它<rt>taa1</rt></ruby><ruby>向<rt>hoeng3</rt></ruby><ruby>下<rt>haa6</rt></ruby>（<ruby>垂<rt>seoi4</rt></ruby>）<ruby>愁<rt>sau4</rt></ruby><ruby>如<rt>jyu4</rt></ruby>（<ruby>鎖<rt>so2</rt></ruby>）<ruby>眉<rt>mei4</rt></ruby><ruby>頭<rt>tau4</rt></ruby>（<ruby>聚<rt>zeoi6</rt></ruby>）
     | Dm7        G | G | Dm Em F G | G / / 2/4
-別離淚（始）終要下（垂）
+<ruby>別<rt>bit6</rt></ruby><ruby>離<rt>lei4</rt></ruby><ruby>淚<rt>leoi6</rt></ruby>（<ruby>始<rt>ci2</rt></ruby>）<ruby>終<rt>zung1</rt></ruby><ruby>要<rt>jiu1</rt></ruby><ruby>下<rt>haa6</rt></ruby>（<ruby>垂<rt>seoi4</rt></ruby>）
 [BRIDGE]
 | C        Em  | Am         C7     | F        E7 |
-（）我已令你（快）樂（）你也讓我（癡）癡醉（你已）在我（心）
+（）<ruby>我<rt>ngo5</rt></ruby><ruby>已<rt>ji5</rt></ruby><ruby>令<rt>ling6</rt></ruby><ruby>你<rt>nei5</rt></ruby>（<ruby>快<rt>faai3</rt></ruby>）<ruby>樂<rt>lok6</rt></ruby>（）<ruby>你<rt>nei5</rt></ruby><ruby>也<rt>jaa5</rt></ruby><ruby>讓<rt>joeng6</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>癡<rt>ci1</rt></ruby>）<ruby>癡<rt>ci1</rt></ruby><ruby>醉<rt>zeoi3</rt></ruby>（<ruby>你<rt>nei5</rt></ruby><ruby>已<rt>ji5</rt></ruby>）<ruby>在<rt>zoi6</rt></ruby><ruby>我<rt>ngo5</rt></ruby>（<ruby>心<rt>sam1</rt></ruby>）
       | Am    Am7        | F      G           | C    Fm |
-不必再問（記）著誰（）留住眼內（每）滴淚（）為何仍繼續流（默）默垂
+<ruby>不<rt>bat1</rt></ruby><ruby>必<rt>bit1</rt></ruby><ruby>再<rt>zoi3</rt></ruby><ruby>問<rt>man6</rt></ruby>（<ruby>記<rt>gei3</rt></ruby>）<ruby>著<rt>zyu3</rt></ruby><ruby>誰<rt>seoi4</rt></ruby>（）<ruby>留<rt>lau4</rt></ruby><ruby>住<rt>zyu6</rt></ruby><ruby>眼<rt>ngaan5</rt></ruby><ruby>內<rt>noi6</rt></ruby>（<ruby>每<rt>mui5</rt></ruby>）<ruby>滴<rt>dik6</rt></ruby><ruby>淚<rt>leoi6</rt></ruby>（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>繼<rt>gai3</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>
 [ENDING]
 G            | C       G           | C       | G# Bb C
-（）為何仍斷續流（默）默垂，（）為何仍斷續流（默）默垂...
+（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>斷<rt>dyun6</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>，（）<ruby>為<rt>wai4</rt></ruby><ruby>何<rt>ho4</rt></ruby><ruby>仍<rt>jing4</rt></ruby><ruby>斷<rt>dyun6</rt></ruby><ruby>續<rt>zuk6</rt></ruby><ruby>流<rt>lau4</rt></ruby>（<ruby>默<rt>mak6</rt></ruby>）<ruby>默<rt>mak6</rt></ruby><ruby>垂<rt>seoi4</rt></ruby>...
 </pre>
         </div>
 
